@@ -17,7 +17,7 @@ class Formant
 	//				Filter coeffs
 	//////////////////////////////////////////////////////////////////
 private:
-	static double m_coeff[5][11];
+	static const double m_coeff[5][11];
 	static char const *m_names[5];
 	//////////////////////////////////////////////////////////////////
 	//				Buffer
